update strings and rename function

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="error_msg">Check your connection and try again</string>
 
     <!--Empty-->
-    <string name="empty_title">Oops, No News yet</string>
+    <string name="empty_title">Oops, No Menu yet</string>
     <string name="empty_msg">Try again later</string>
 
     <!--Button-->
